alpm-types/src/snapshots/path::invalid_soname_lookup_directory_parser@case_3.snap
---
source: alpm-types/src/path.rs
---
error: invalid prefix for a shared object lookup path
 | 
 | :/usr/lib
 | ^
 | 
 = while parsing:
   soname lookup directory: (:/usr/lib)
   → invalid prefix for a shared object lookup path
 = an error occurred: Parser failed with the following error:
error: invalid first character of package name
 | 
 | :/usr/lib
 | ^ expected one of: ASCII alphanumeric character, `_`, `@`, `+`
 | 
 = while parsing:
   alpm-package-name: (:/usr/lib)
   → invalid first character of package name
   → expected one of: ASCII alphanumeric character, `_`, `@`, `+`
