alpm-types/src/snapshots/pkg::extra_data_entry_from_str_error@case_1.snap
---
source: alpm-types/src/pkg.rs
---
key
   ^
invalid extra data delimiter
expected a `=` between the key and value
