alpm-types/src/snapshots/pkg::extra_data_entry_from_str_error@case_2.snap
---
source: alpm-types/src/pkg.rs
---
error: invalid extra data value
 | 
 | key=
 | ~~~~^ expected a UTF-8 string
 | 
 = while parsing:
   extra-data entry: (key=)
   → invalid extra data value
   → expected a UTF-8 string
