alpm-types/src/snapshots/source::invalid_filename@case_1.snap
---
source: alpm-types/src/source.rs
---
error: invalid package artifact source
 | 
 | ./bikeshed_colour.patch
 | ^ expected a URL or a relative path without separators or a NUL byte.
 | 
 = while parsing:
   package artifact source: (./bikeshed_colour.pa…)
   → expected a URL or a relative path without separators or a NUL byte.
 = an error occurred: The path is not a relative sibling file, i.e. it either starts with a `./` or contains a directory: ./bikeshed_colour.patch
