alpm-types/src/snapshots/source::invalid_filename@case_2.snap
---
source: alpm-types/src/source.rs
---
error: invalid source url
 | 
 | 
 | ^ expected a filename followed by `::` or a path/url with valid end of input.
 | 
 = while parsing:
   package artifact source: ()
   → invalid source url
   → expected a filename followed by `::` or a path/url with valid end of input.
