alpm-types/src/snapshots/source::invalid_filename@case_4.snap
---
source: alpm-types/src/source.rs
---
error: invalid package artifact source
 | 
 | /absolute/path
 | ^ expected a URL or a relative path without separators or a NUL byte.
 | 
 = while parsing:
   package artifact source: (/absolute/path)
   → expected a URL or a relative path without separators or a NUL byte.
 = an error occurred: The path is not a relative sibling file, i.e. it either starts with a `./` or contains a directory: /absolute/path
