alpm-types/src/snapshots/system::invalid_architecture_from_string@case_1.snap
---
source: alpm-types/src/system.rs
---
f oo
 ^
invalid character in architecture
expected a string containing only ASCII alphanumeric characters and underscores.
